# Bees_ML2

main/: AndroidManifest.xml
main/cpp/: CMakeLists.txt  main.cpp  skeleton.cpp  skeleton.h
main/res/values/: strings.xml
